Overflow problem fixed on rows

--- a/src/middle.css
+++ b/src/middle.css
@@ -84,4 +84,7 @@
     font: 10px sans-serif;
 }
 
+.movies{
+    overflow: hidden;
+}
 
